QQuickItemPrivate: Make {width,height}Valid a function

There is now some additional logic, so we cannot simply rely on the
boolean flag.

Task-number: QTBUG-94703
Change-Id: Id4674efd205a58b015a82b3c06e63c8a031f6607
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit f3452af843fbb50718d60dc4b2726bc156b2b44c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>